--- a/index.html
+++ b/index.html
@@ -283,31 +283,16 @@
               "
             >
               <img
-                width="100%"
-                height="40"
+                style="object-fit: cover; width: 100%"
                 src="./assets/img/certification/helwan.jpeg"
                 class="img-fluid"
                 alt=""
               />
               <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
               <p style="text-align: left; color: #fff; padding: 5px 10px">
-                <em
-                  >bachelor degree in computer science helwan cairo
-                  university</em
-                >
+                <em>bachelor degree in computer science helwan university</em>
               </p>
               <h5 style="text-align: left; padding: 0px 10px">june 2016</h5>
-              <h6 style="text-align: left; color: #fff; padding: 0px 10px">
-                Relevant Coursework
-              </h6>
-              <ul style="text-align: left; color: #fff">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
-                <!-- <li>Computer Vision</li> -->
-              </ul>
             </div>
           </div>
         </div>
