--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>SUltan Portfolio</title>
+    <title>Mohamed Sultan</title>
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
 
@@ -215,19 +215,19 @@
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-database-2-line" style="color: #5578ff"></i>
-              <h3>Machine Learning</h3>
+              <h3>Data bases</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-camera-3-line" style="color: #e80368"></i>
-              <h3>Computer Vision</h3>
+              <h3>Frontend development</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-english-input" style="color: #1c7d32"></i>
-              <h3>Natural Language Processing</h3>
+              <h3>Backend Development</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
@@ -239,7 +239,7 @@
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-bar-chart-box-line" style="color: #f1081f"></i>
-              <h3>Visualization</h3>
+              <h3>Ui Designs</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
@@ -251,7 +251,7 @@
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="ri-image-line" style="color: #ffc107"></i>
-              <h3>Image Processing</h3>
+              <h3>Mobile app development</h3>
             </div>
           </div>
         </div>
