--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
         <div class="social-links">
           <a
-            href="https://www.linkedin.com/in/rajaprerak"
+            href="https://www.linkedin.com/in/mohamedhassansultan/"
             target="_blank"
             class="linkedin"
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
-            href="https://www.github.com/rajaprerak"
+            href="https://github.com/mohamed-sultan"
             target="_blank"
             class="github"
             ><i class="bx bxl-github"></i
