--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>Phone:</strong> +966 58-164-3175
+                    <strong>Phone:</strong> +966 597059283
                   </li>
                 </ul>
               </div>
