--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </li>
             <li>
               <a
-                href="https://drive.google.com/file/d/1x8dTTGVGsRsZavbyMJDiugmVThPtEaTn/view?usp=sharing"
+                href="https://drive.google.com/file/d/1OeW-6xNxyxIE8eB9AYQ-gEaqjfMbJuGU"
                 target="_blank"
               >
                 <span>Resume</span></a
