Update experience section: add Money Loop, update all positions, add app links, remove durations

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </a>
         </div>
         <div class="mb-2" style="color: #fff; font-size: 1.1rem;">
-          🚀 I'm a software engineer with 7+ years of experience building apps that serve millions of users.
+          🚀 I'm a software engineer with 8+ years of experience building apps that serve millions of users.
         </div>
       </div>
       <h2 style="color: #fff">
@@ -144,7 +144,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            🚀 Senior Full-Stack & Mobile Developer | 7+ Years Expertise: React, React Native, Swift, Kotlin, Flutter |
+            🚀 Senior Full-Stack & Mobile Developer | 8+ Years Expertise: React, React Native, Swift, Kotlin, Flutter |
             Python & Django & Node.js Backend | CI/CD Architect | Delivering Scalable, High-Performance Apps
           </p>
           <div class="row">
@@ -370,31 +370,80 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align: left">
-              <a href="https://www.saib.com.sa/" style="color: #12d640">The Saudi Investment Bank</a><br />
+              <a href="#" style="color: #12d640">Money Loop Fintech</a><br />
             </h4>
-            <h5 style="text-align: left">April 2023 - Present</h5>
+            <h5 style="text-align: left">August 2024 - Present</h5>
             <p style="text-align: left; color: #fff">
-              <em>Senior React Native Developer</em>
+              <em>Mobile Lead [React Native]</em>
+            </p>
+            <p style="text-align: left; color: #fff">
+              <em>Riyadh, Saudi Arabia</em>
             </p>
             <ul style="text-align: left">
               <li>
-                Implementing travelApp app for Saudi investment bank using React Native, TypeScript, Jest and React
-                Native Testing Library
+                Enhanced mobile app architecture using atomic and feature pattern
+              </li>
+              <li>
+                Implemented core banking security requirements by SAMA central bank like SSL pinning, jailbroken detection, and code obfuscation
+              </li>
+              <li>
+                Built Fastlane pipelines integrated with Bitrise and Slack for fully automated CI/CD
+              </li>
+              <li>
+                Increased test coverage using Jest and React Native Testing Library, reaching up to 85% coverage
+              </li>
+              <li>
+                Implemented over-the-air (OTA) updates with a hot update mechanism and enforced mandatory/force updates
+              </li>
+              <li>
+                Integrated Sentry for real-time crash detection and performance monitoring
+              </li>
+              <li>
+                Optimized performance with "Why Did You Render" and lazy loading for better mobile rendering
+              </li>
+              <li>
+                Working on core app features like multi-factor login, KYC, and payment SDK
+              </li>
+              <li>
+                Apps: Money Loop App
+                <br>
+                <a href="https://play.google.com/store/apps/details?id=com.moneyloop&hl=en"
+                  target="_blank" style="color: #12d640">Android Link</a> |
+                <a href="https://apps.apple.com/us/app/money-loop-%D9%85%D9%88%D9%86%D9%8A-%D9%84%D9%88%D8%A8/id1613145954" target="_blank"
+                  style="color: #12d640">iOS Link</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align: left">
+              <a href="https://www.saib.com.sa/" style="color: #12d640">The Saudi Investment Bank</a><br />
+            </h4>
+            <h5 style="text-align: left">April 2023 - August 2024</h5>
+            <p style="text-align: left; color: #fff">
+              <em>Squad Lead [React Native]</em>
+            </p>
+            <p style="text-align: left; color: #fff">
+              <em>Riyadh, Saudi Arabia</em>
+            </p>
+            <ul style="text-align: left">
+              <li>
+                Leading the mobile squad for SAIB Travel Card delivery
+              </li>
+              <li>
+                Implementing CI/CD pipelines using Fastlane for automated deployment
+              </li>
+              <li>
+                Reviewing squad pull requests and managing the application flavors and schema
+              </li>
+              <li>
+                Implementing TravelApp app for Saudi Investment Bank using React Native, TypeScript, Jest and React Native Testing Library
               </li>
               <li>
                 Using Zustand for state management and React Query for asynchronous state management
               </li>
               <li>
-                Implementing CI/CD pipelines using Fastlane for deployment automation
-              </li>
-              <li>
                 Implementing core banking features like Onboarding, Dashboard, Card management, loyalty and credit limit
-              </li>
-              <li>
-                Implementing mobile security best practices across the application
-              </li>
-              <li>
-                Working in a diverse team environment, collaborating with cross-functional teams
               </li>
               <li>
                 Apps: SAIB Travel App
@@ -413,28 +462,29 @@
             </h4>
             <h5 style="text-align: left">March 2022 - February 2023</h5>
             <p style="text-align: left; color: #fff">
-              <em>Senior Mobile Application Engineer</em>
+              <em>Senior [Web-Mobile] React.js / React Native Developer</em>
+            </p>
+            <p style="text-align: left; color: #fff">
+              <em>Riyadh, Saudi Arabia</em>
             </p>
             <ul style="text-align: left">
               <li>
-                Using React and React Native for Yaqoot App with over 1Million downloads which manages Sim and Esim data
-                and package management
+                Using React and React Native for Yaqoot App with over 1Million downloads which manages Sim and Esim data and package management powered by Zain KSA
               </li>
               <li>
-                Creating reusable components for the team that are fully tested using Jest and React Testing Library
-                providing unit, snapshot and integration testing
+                Main role is to create awesome reusable components for the team that are used across the app which are fully tested and covered using Jest and React Testing Library, providing unit, snapshot and integration testing
               </li>
               <li>
-                Improving the render of the mobile application using React best practices and render performance
+                Improved the render of the mobile application using React best practices and render performance
               </li>
               <li>
                 Monitoring and tracking APIs response times and failure requests in Sentry Io
               </li>
               <li>
-                Implementing mobile application security best practices across the application
+                Achieved mobile application security best practices across the mobile application
               </li>
               <li>
-                Providing product support for TIS hot fixes issues reported by the product and QA team
+                Provided product support for TIS hot fixes issues reported by the product and QA team
               </li>
               <li>
                 Apps: Yaqoot App
@@ -454,21 +504,23 @@
             </h4>
             <h5 style="text-align: left">April 2021 - March 2022</h5>
             <p style="text-align: left; color: #fff">
-              <em>Senior React Native Developer</em>
+              <em>Senior [Web-Mobile] React.js / React Native Developer</em>
             </p>
             <ul style="text-align: left">
               <li>
-                Implementing Emkan App using ReactJS, React Native with Redux Thunk and Persist using Bootstrap
-                framework
+                Implementing Emkan App that serves more than millions of users
               </li>
               <li>
-                Implementing CI/CD using Microsoft Appcenter for mobile release automation
+                Using ReactJS, React Native with Redux Thunk and Persist using Bootstrap framework with HTML and CSS3
+              </li>
+              <li>
+                Implementing CI/CD using Microsoft AppCenter for mobile release automation
               </li>
               <li>
                 Collaborating with QA for supporting UAT issues and fixing critical bugs
               </li>
               <li>
-                Working with UI Designers to build pixel perfect UI from Figma designs
+                Collaborating with UI Designers to build pixel perfect UI from Figma design
               </li>
               <li>
                 Apps: Emkan Finance App
@@ -486,23 +538,28 @@
             <h4 style="text-align: left">
               <a href="https://labayh.com/" style="color: #12d640">Labayh | لبيه</a><br />
             </h4>
-            <h5 style="text-align: left">October 2019 - April 2021</h5>
+            <h5 style="text-align: left">April 2019 - April 2021</h5>
             <p style="text-align: left; color: #fff">
-              <em>Senior React Native Developer</em>
+              <em>Senior Full-Stack Engineer (React / React Native / Node.js)</em>
+            </p>
+            <p style="text-align: left; color: #fff">
+              <em>Saudi Arabia</em>
             </p>
             <ul style="text-align: left">
               <li>
-                Leading the mobile development for both patient and consultant apps for more than 300K users
+                Working as full stack React.js and Node.js for the backend deployed on DigitalOcean
               </li>
               <li>
-                Using Agora SDK and CallKit for native call implementation with Adjust and Firebase Analytics for
-                tracking
+                Leading the mobile development for both patient and consultant apps for more than 700K users
               </li>
               <li>
-                Integrating Payfort and Apple Pay SDK for payment solutions
+                Using Agora SDK and CallKit for native call implementation with Adjust and Firebase Analytics for tracking app analytics
               </li>
               <li>
-                Implementing Firebase Realtime DB and FCM for push notifications
+                Integrated Payfort and Apple Pay SDK for payment solutions
+              </li>
+              <li>
+                Using Firebase Realtime DB and FCM for push notifications
               </li>
               <li>
                 Apps: Labayh Patient App & Labayh Consultant App
@@ -524,58 +581,37 @@
 
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align: left">
-              <a href="https://labayh.com/" style="color: #12d640">Labayh | لبيه</a><br />
-            </h4>
-            <h5 style="text-align: left">April 2019 - October 2019</h5>
-            <p style="text-align: left; color: #fff">
-              <em>Part Time React Native Developer</em>
-            </p>
-            <ul style="text-align: left">
-              <li>
-                Working remotely as a React Native developer
-              </li>
-              <li>
-                Using Redux Thunk, Redux Saga and Redux Persist for state management
-              </li>
-              <li>
-                Implementing Firebase Push Notifications (FCM) and Firebase Crashlytics for analytics
-              </li>
-              <li>
-                Developing REST APIs and Socket.io for real-time chat functionality
-              </li>
-              <li>
-                Using Microsoft App Center to automate the CI/CD pipeline process
-              </li>
-              <li>
-                Working with HTML, CSS, JavaScript, Bootstrap and React Redux on building BusinessHub website
-              </li>
-              <li>
-                Businesshub Link: <a href="https://www.businesshub.com.sa/" target="_blank"
-                  style="color: #12d640">Business Hub</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <h4 style="text-align: left">
-              <a href="#" style="color: #12d640">New Concept</a><br />
+              <a href="https://msool.io/" style="color: #12d640">MSOOL</a><br />
             </h4>
             <h5 style="text-align: left">January 2018 - August 2019</h5>
             <p style="text-align: left; color: #fff">
-              <em>Full Stack JavaScript Developer</em>
+              <em>Frontend Engineer [Web & Mobile]</em>
             </p>
             <ul style="text-align: left">
               <li>
-                Working as full stack JavaScript developer with NodeJS and ReactJS
+                Developed and maintained frontend applications using React, React Native, and TypeScript
               </li>
               <li>
-                Providing NodeJS REST APIs with Express and MongoDB with Mongoose ORM
+                Built and integrated payment SDKs (e.g., for PayZaty and Moyaser) for seamless in-app payments
               </li>
               <li>
-                Implementing Socket.io for real-time communication
+                Utilized Material-UI (MUI) for consistent UI components and theming
               </li>
               <li>
-                Working with GraphQL using Apollo Client and Apollo Server Express
+                Implemented unit and integration tests with Jest to ensure code quality and robustness
+              </li>
+              <li>
+                Integrated Sentry for real-time error monitoring and performance tracking
+              </li>
+              <li>
+                Collaborated with UX designers, backend engineers and product managers to deliver high-quality features
+              </li>
+              <li>
+                Apps: MSOOL App
+                <br>
+                <a href="https://msool.io/" target="_blank" style="color: #12d640">Web Link</a> |
+                <a href="https://apps.apple.com/eg/app/msool/id6749251220" target="_blank"
+                  style="color: #12d640">iOS Link</a>
               </li>
             </ul>
           </div>
